Update issue 238 Merge from branch 0_8_X_ASL: source code is now fully aligned and working with both Hibernate and OpenJPA!
git-svn-id: https://svn.apache.org/repos/asf/incubator/syncope/trunk@1247324 13f79535-47bb-0310-9956-ffa450edef68